# forgedb

./: CMakeLists.txt
forgedb/: README.md  main.cpp
forgedb.xcodeproj/: project.pbxproj
forgedb.xcodeproj/xcuserdata/chidumennamdi.xcuserdatad/xcschemes/: xcschememanagement.plist
forgedb/TokenType/: TokenType.cpp  TokenType.hpp
forgedb/docs/: Design.md
forgedb/expressions/: includes.h
forgedb/expressions/Binary/: Binary.cpp  Binary.hpp
forgedb/expressions/Expression/: Expression.cpp  Expression.hpp
forgedb/expressions/Identifier/: Identifier.cpp  Identifier.hpp
forgedb/expressions/Literal/: Literal.cpp  Literal.hpp
forgedb/expressions/eval/: eval.cpp  eval.hpp
forgedb/lexer/: lexer.cpp  lexer.hpp
forgedb/parser/: parser.cpp  parser.hpp
forgedb/plan-pipeline/execution/executor/: Executor.cpp  Executor.hpp
forgedb/plan-pipeline/planner/: Planner.cpp  Planner.hpp
forgedb/plan-pipeline/plans/BasePlan/: Plan.cpp  Plan.hpp
forgedb/plan-pipeline/query/: query.cpp  query.hpp
forgedb/statements/: includes.h
forgedb/statements/select/: Select.cpp  Select.hpp
forgedb/statements/statement/: Statement.cpp  Statement.hpp
forgedb/statements/where/: Where.cpp  Where.hpp
forgedb/token/: Token.cpp  Token.hpp
